--- a/Latihan/DOM/Calculator/index.html
+++ b/Latihan/DOM/Calculator/index.html
@@ -6,8 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  
-  <!-- <script src="script.js"></script> -->
-  <script src="script2.js"></script>
+  <button id="satu" value=1>1</button>  
+  <script src="script.js"></script>
 </body>
 </html>
